# rhai-wasm

./: .gitignore  Cargo.toml  README.md  env.js  index.html  index.js  package-lock.json  package.json  rollup.config.js  server.js  test.html  test.js
examples/vite-project/: package-lock.json
examples/vite-project/src/: main.ts
examples/vite-project/src/rhai/: resolve_model.rhai
extension/function-inspector/: index.copy.html  index.html  package-lock.json  package.json  rollup.config.js
extension/function-inspector/src/: main.js
extension/function-inspector/usage/: basic.js
src/: lib.rs  tests.rs
src_js/: index.js  object_to_rhai.js
vite-test/: index.html  tsconfig.json
vite-test/public/: test.html
vite-test/src/: main.ts
vite-test/src/rhai/: resolve_model.rhai
