[package]
name = "rhai-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rhai = {version = "1.23.4", default-features = false, features = ["decimal", "only_i32", "f32_float", "no_time"]}
wasm-bindgen = "0.2"
rust_decimal = "1.39.0"
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false